# cmo-agent

./: README.md  azure.yaml  pyproject.toml
.github/instructions/: cmo-agent.instructions.md
.github/prompts/: cmo-expert.md
.github/skills/cmo-agent/: SKILL.md
.github/workflows/: README.md  ci.yml  deploy.yml
docs/: api-reference.md  architecture.md  contributing.md
examples/: basic_usage.py
src/cmo_agent/: __init__.py  agent.py
tests/: __init__.py  conftest.py  test_cmo_agent.py
