[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cmo-agent"
version = "1.0.0"
description = "CMOAgent — Chief Marketing Officer agent with dual marketing and leadership purposes."
readme = "README.md"
license = { text = "Apache-2.0" }
authors = [{ name = "ASISaga", email = "opensource@asisaga.com" }]
keywords = ["agent", "ai", "cmo", "marketing", "leadership", "perpetual", "purpose-driven", "lora", "mcp", "aisaga"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Framework :: AsyncIO",
]
requires-python = ">=3.10"
dependencies = [
    "leadership-agent>=1.0.0",
]

[project.optional-dependencies]
azure = [
    "leadership-agent[azure]>=1.0.0",
]
full = [
    "cmo-agent[azure]",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "pylint>=3.0.0",
    "mypy>=1.8.0",
    "black>=24.0.0",
    "isort>=5.13.0",
    "leadership-agent>=1.0.0",
    "purpose-driven-agent>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/ASISaga/cmo-agent"
Documentation = "https://github.com/ASISaga/cmo-agent/tree/main/docs"
Repository = "https://github.com/ASISaga/cmo-agent"
Issues = "https://github.com/ASISaga/cmo-agent/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/cmo_agent"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.pylint.main]
py-version = "3.10"

[tool.pylint.format]
max-line-length = 120

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
